Importing data form metric2.o metrics into the indexer

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,13 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps,
+  [
+   {ranch, "~>1.2.1"},
+   {dqe_idx, "~>0.1.12"},
+   {dqe_idx_pg, "~>0.1.18"},
+   {ddb_client, "~>0.1.20"}
+  ]}.
 
+{plugins, [rebar3_auto]}.
 {relx, [{release, { ddb_proxy, "0.1.0" },
          [ddb_proxy,
           sasl]},
