--- a/config/sys.config
+++ b/config/sys.config
@@ -1,3 +1,18 @@
-[
-  { ddb_proxy, []}
-].
+%% -*- erlang -*-
+[{dqe_idx,
+  [{lookup_module, dqe_idx_pg}]},
+ {ddb_proxy,
+  [{backend, {"127.0.0.1", 5555}},
+   {db,
+    [{size, 10},
+     {database, "metric_metadata"},
+     {username, "ddb"},
+     {password, "ddb"},
+     {host, "127.0.0.1"}]},
+   {listeners,
+    [
+     %%{dp_graphite, <<"graphite">>, 2003}
+     %%{dp_metric2, <<"metrics2.0">>, 2004}
+     %%{dp_otsdb, <<"OpenTSDB">>, 2005}
+     %%{dp_prometheus, <<"Prometheus">>, 2006}
+    ]}]}].
