Add prometheus scrapper

--- a/config/sys.config
+++ b/config/sys.config
@@ -9,6 +9,10 @@
      {username, "ddb"},
      {password, "ddb"},
      {host, "127.0.0.1"}]},
+   {prom_scrappers,
+    [
+     %%{node_exporter, <<"prom">>, "http://localhost:9100/metrics", 10000}
+    ]},
    {listeners,
     [
      %%{dp_graphite, <<"graphite">>, 2003}
