--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,11 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info, warnings_as_errors, {parse_transform, lager_transform}]}.
 {deps,
   [
    {ranch, "~>1.2.1"},
+   {hackney, "~>1.6.0"},
+   {mmath, "0.2.0-alpha1"},
    {dqe_idx, "~>0.1.12"},
+   {dp_decoder, "~>0.2.0"},
    {dqe_idx_pg, "~>0.1.18"},
    {ddb_client, "~>0.1.20"}
   ]}.
