--- a/rebar.config
+++ b/rebar.config
@@ -1,30 +1,83 @@
+%% -*- erlang -*-
+
 {erl_opts, [debug_info, warnings_as_errors, {parse_transform, lager_transform}]}.
+
+%%-------------------------------------------------------------------
+%% Dependencies
+%%-------------------------------------------------------------------
+
 {deps,
   [
+   recon,
+   {lager, "~>3.2.0"},
    {ranch, "~>1.2.1"},
    {hackney, "~>1.6.0"},
    {mmath, "0.2.0-alpha1"},
-   {dqe_idx, "~>0.1.12"},
+   {dqe_idx, "~>0.1.14"},
    {dp_decoder, "~>0.2.0"},
-   {dqe_idx_pg, "~>0.1.18"},
+   {dqe_idx_pg, "~>0.2.11"},
    {ddb_client, "~>0.1.20"}
   ]}.
 
+%%-------------------------------------------------------------------
+%% Plugins
+%%-------------------------------------------------------------------
+
+{project_plugins, [{rebar3_cuttlefish, "0.10.0"}]}.
 {plugins, [rebar3_auto]}.
-{relx, [{release, { ddb_proxy, "0.1.0" },
+
+
+%%-------------------------------------------------------------------
+%% Cuttlefish
+%%-------------------------------------------------------------------
+
+{cuttlefish,
+ [{file_name, "ddb_proxy.conf.example"},
+  {schema_discovery, false}]}.
+
+%%-------------------------------------------------------------------
+%% Profiles
+%%-------------------------------------------------------------------
+
+{profiles,
+ [{prod, [{relx, [{dev_mode, false},
+                  {include_erts, true}]}]},
+  {deb, [{relx, [{dev_mode, false},
+                 {include_erts, true},
+                 {overlay_vars, "rel/vars/deb.config"}]},
+         {cuttlefish, [{file_name, "ddb_proxy.conf.example"}]}]}
+ ]}.
+
+%%-------------------------------------------------------------------
+%% RELx
+%%-------------------------------------------------------------------
+
+{relx,
+  [{release, {ddb_proxy, "0.1.0"},
          [ddb_proxy,
+          {recon, load},
           sasl]},
 
-        {sys_config, "./config/sys.config"},
-        {vm_args, "./config/vm.args"},
-
+        {overlay_vars, "rel/vars.config"},
         {dev_mode, true},
-        {include_erts, false},
+	{include_erts, true},
+        {generate_start_script, false},
 
-        {extended_start_script, true}]
-}.
-
-{profiles, [{prod, [{relx, [{dev_mode, false},
-                            {include_erts, true}]}]
-            }]
-}.
+        {overlay,
+          [{mkdir, "etc"},
+           {mkdir, "share"},
+	   {template, "rel/files/ddb_proxy", "bin/ddb_proxy"},
+           {copy, "rel/files/erl", "erts-\{\{erts_vsn\}\}/bin/erl"},
+           {copy, "rel/files/nodetool", "erts-\{\{erts_vsn\}\}/bin/nodetool"},
+           {template, "schema/ddb_proxy.schema",
+            "share/schema/00-ddb_proxy.schema"},
+           {template, "schema/erlang_vm.schema",
+            "share/schema/01-vm.schema"},
+           {template, "\{\{build_dir\}\}/lib/dqe_idx_pg/priv/dqe_idx_pg.schema",
+            "share/schema/02-dqe_idx_pg.schema"},
+           {template, "\{\{build_dir\}\}/lib/dqe_idx/priv/dqe_idx.schema",
+            "share/schema/03-dqe_idx.schema"},
+           {template, "schema/lager.schema",
+            "share/schema/04-lager.schema"}
+          ]}
+]}.
