Add support for http listener

--- a/rel/vars.config
+++ b/rel/vars.config
@@ -10,9 +10,10 @@
 {prometheus_default_bucket,     "prom"}.
 {prometheus_default_url,        "http://localhost:9100/metrics"}.
 {prometheus_default_frequency,  10000}.
-{listeners_default_decoder,     "dp_otsdb"}.
-{listeners_default_bucket,      "OpenTSDB"}.
-{listeners_default_port,        4242}.
+{listeners_default_decoder,     "dp_influx"}.
+{listeners_default_bucket,      "InfluxDB"}.
+{listeners_default_port,        8086}.
+{listeners_default_proto,       http}.
 {log_path,                      "/data/ddb_proxy/log"}.
 
 %%
