--- a/rebar.config
+++ b/rebar.config
@@ -9,15 +9,16 @@
 {deps,
   [
    recon,
-   trie,
    {lager, "~>3.2.0"},
    {ranch, "~>1.2.1"},
+   {cowboy, "~>1.0.0"},
+   {jsone, "~>1.2.3"},
    {hackney, "~>1.6.0"},
-   {mmath, "0.2.0-alpha1"},
+   {mmath, "~>0.2.9"},
    {dqe_idx, "~>0.1.14"},
-   {dp_decoder, "~>0.2.0"},
+   {dp_decoder, "~>0.2.6"},
    {dqe_idx_pg, "~>0.2.11"},
-   {ddb_client, "~>0.1.20"}
+   {ddb_client, "~>0.1.28"}
   ]}.
 
 %%-------------------------------------------------------------------
