Fix parser and add missing files

--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,7 @@
    {dqe_idx, "~>0.1.14"},
    {dp_decoder, "~>0.2.6"},
    {dqe_idx_pg, "~>0.2.11"},
-   {ddb_client, "~>0.1.28"}
+   {ddb_connection, "~>0.1.0"}
   ]}.
 
 %%-------------------------------------------------------------------
@@ -80,7 +80,9 @@
             "share/schema/02-dqe_idx_pg.schema"},
            {template, "\{\{build_dir\}\}/lib/dqe_idx/priv/dqe_idx.schema",
             "share/schema/03-dqe_idx.schema"},
+           {template, "\{\{build_dir\}\}/lib/ddb_connection/priv/ddb_connection.schema",
+            "share/schema/04-ddb_connection.schema"},
            {template, "schema/lager.schema",
-            "share/schema/04-lager.schema"}
+            "share/schema/06-lager.schema"}
           ]}
 ]}.
