Improve the smartos package

--- a/rebar.config
+++ b/rebar.config
@@ -73,6 +73,7 @@
            {template, "rel/files/ddb_proxy", "bin/ddb_proxy"},
            {copy, "rel/files/erl", "erts-\{\{erts_vsn\}\}/bin/erl"},
            {copy, "rel/files/nodetool", "erts-\{\{erts_vsn\}\}/bin/nodetool"},
+           {template, "share/ddb_proxy.xml", "share/ddb_proxy.xml"},
            {template, "schema/ddb_proxy.schema",
             "share/schema/00-ddb_proxy.schema"},
            {template, "schema/erlang_vm.schema",
