--- a/rebar.config
+++ b/rebar.config
@@ -46,7 +46,7 @@
 {profiles,
  [{prod, [{relx, [{dev_mode, false},
                   {include_erts, true}]}]},
-  {lint,  [{plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.6"}}}]}]},
+  {lint,  [{plugins, [rebar3_lint]}]},
   {deb, [{relx, [{dev_mode, false},
                  {include_erts, true},
                  {overlay_vars, "rel/vars/deb.config"}]},
