--- a/rel/vars.config
+++ b/rel/vars.config
@@ -30,3 +30,5 @@
 {platform_bin_dir,              "./bin"}.
 {platform_lib_dir,              "./lib"}.
 {platform_log_dir,              "/data/ddb_proxy/log"}.
+
+{bugsnag_app_version,           "0.2.1"}.
