--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,8 @@
 %% -*- erlang -*-
 
-{erl_opts, [debug_info, warnings_as_errors, {parse_transform, lager_transform}]}.
+{erl_opts, [
+  {i, "./_build/default/plugins/gpb/include"},
+  debug_info, warnings_as_errors, {parse_transform, lager_transform}]}.
 
 %%-------------------------------------------------------------------
 %% Dependencies
@@ -28,8 +30,22 @@
 %%-------------------------------------------------------------------
 
 {project_plugins, [{rebar3_cuttlefish, "0.10.0"}]}.
-{plugins, [rebar3_auto]}.
+{plugins, [rebar3_auto, rebar3_gpb_plugin]}.
 
+{gpb_opts, [
+    {i, "proto"},
+    {module_name_suffix, "_pb"},
+    {o_erl, "src"},
+    {o_hrl, "include"},
+    {strings_as_binaries, true},
+    type_specs]}.
+
+{provider_hooks, [
+    {pre, [
+        {compile, {protobuf, compile}},
+        {clean, {protobuf, clean}}
+    ]}
+]}.
 
 %%-------------------------------------------------------------------
 %% Cuttlefish
