Add breaking config

--- a/rebar.config
+++ b/rebar.config
@@ -32,14 +32,14 @@
 {project_plugins, [{rebar3_cuttlefish, "0.10.0"}]}.
 {plugins, [rebar3_gpb_plugin]}.
 
+
 {gpb_opts, [
     {i, "proto"},
     {module_name_suffix, "_pb"},
-    {o_erl, "../../../../apps/ddb_proxy/src"},
-    {o_hrl, "../../../../apps/ddb_proxy/include"},
+    {o_erl, "src"},
+    {o_hrl, "include"},
     {strings_as_binaries, true},
     type_specs]}.
-
 {provider_hooks,
  [{pre, [
          {compile, {protobuf, compile}},
