--- a/rebar.config
+++ b/rebar.config
@@ -49,7 +49,7 @@
                   {include_erts, true}]}]},
   {lint,  [{plugins, [rebar3_lint]}]},
   {deb, [{relx, [{dev_mode, false},
-                 {include_erts, true}]}]}]}
+                 {include_erts, true}]}]}
  ]}.
 
 %%-------------------------------------------------------------------
