--- a/rebar.config
+++ b/rebar.config
@@ -57,7 +57,7 @@
 %%-------------------------------------------------------------------
 
 {relx,
-  [{release, {ddb_proxy, "0.3.1"},
+  [{release, {ddb_proxy, "0.3.1p1"},
          [ddb_proxy,
           {recon, load},
           sasl]},
