--- a/rebar.config
+++ b/rebar.config
@@ -13,6 +13,7 @@
    recon,
    trie,
    fifo_utils,
+   {snappyer, "~>1.2.0"},
    {lager, "~>3.2.0"},
    {ranch, "~>1.2.1"},
    {cowboy, "~>1.0.0"},
