switch to fifo_lager

--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,7 @@
    trie,
    fifo_utils,
    {snappyer, "~>1.2.0"},
-   {lager, "~>3.2.0"},
+   {fifo_lager, "~>0.1.4"},
    {ranch, "~>1.2.1"},
    {cowboy, "~>1.0.0"},
    {jsone, "~>1.2.3"},
@@ -85,7 +85,7 @@
             "share/schema/03-dqe_idx.schema"},
            {template, "\{\{build_dir\}\}/lib/ddb_connection/priv/ddb_connection.schema",
             "share/schema/04-ddb_connection.schema"},
-           {template, "schema/lager.schema",
+           {template, "\{\{build_dir\}\}/lib/fifo_lager/priv/lager.schema",
             "share/schema/06-lager.schema"}
           ]}
 ]}.
