--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
    recon,
    trie,
    fifo_utils,
-   {snappyer, "~>1.2.0"},
+   {snappiest, "~>1.2.0"},
    {fifo_lager, "~>0.1.4"},
    {ranch, "~>1.2.1"},
    {cowboy, "~>1.0.0"},
