Build cleaner for BSD

--- a/rel/vars.config
+++ b/rel/vars.config
@@ -32,3 +32,4 @@
 {platform_log_dir,              "/data/ddb_proxy/log"}.
 
 {bugsnag_app_version,           "0.3.2"}.
+{service,                       "ddb_proxy"}.
