Change executable name & update packaging
Executable name changed to dpx to be more consistant with other services.
SmartOS service name is now dalmatiner/px
Update debian builds to work.

--- a/rebar.config
+++ b/rebar.config
@@ -38,7 +38,7 @@
 %%-------------------------------------------------------------------
 
 {cuttlefish,
- [{file_name, "ddb_proxy.conf.example"},
+ [{file_name, "dalmatinerpx.conf.example"},
   {schema_discovery, false}]}.
 
 %%-------------------------------------------------------------------
@@ -50,6 +50,7 @@
                   {include_erts, true}]}]},
   {lint,  [{plugins, [rebar3_lint]}]},
   {deb, [{relx, [{dev_mode, false},
+                 {overlay_vars, "rel/vars/deb.config"},
                  {include_erts, true}]}]}
  ]}.
 
@@ -58,7 +59,7 @@
 %%-------------------------------------------------------------------
 
 {relx,
-  [{release, {ddb_proxy, "0.3.2"},
+  [{release, {dpx, "0.3.2"},
          [ddb_proxy,
           {recon, load},
           sasl]},
@@ -71,12 +72,12 @@
         {overlay,
           [{mkdir, "etc"},
            {mkdir, "share"},
-           {template, "rel/files/ddb_proxy", "bin/ddb_proxy"},
+           {template, "rel/files/dpx", "bin/dpx"},
            {copy, "rel/files/erl", "erts-\{\{erts_vsn\}\}/bin/erl"},
            {copy, "rel/files/nodetool", "erts-\{\{erts_vsn\}\}/bin/nodetool"},
-           {template, "share/ddb_proxy.xml", "share/ddb_proxy.xml"},
-           {template, "schema/ddb_proxy.schema",
-            "share/schema/00-ddb_proxy.schema"},
+           {template, "share/dpx.xml", "share/dpx.xml"},
+           {template, "schema/dpx.schema",
+            "share/schema/00-dpx.schema"},
            {template, "schema/erlang_vm.schema",
             "share/schema/01-vm.schema"},
            {template, "\{\{build_dir\}\}/lib/dqe_idx_pg/priv/dqe_idx_pg.schema",
@@ -85,7 +86,7 @@
             "share/schema/03-dqe_idx.schema"},
            {template, "\{\{build_dir\}\}/lib/ddb_connection/priv/ddb_connection.schema",
             "share/schema/04-ddb_connection.schema"},
-           {template, "\{\{build_dir\}\}/lib/fifo_lager/priv/lager.schema",
+           {template, "schema/lager.schema",
             "share/schema/06-lager.schema"}
           ]}
 ]}.
