--- a/rel/vars/deb.config
+++ b/rel/vars/deb.config
@@ -1,19 +1,4 @@
 %%
-%% rebar.config
-%%
-{build_dir, "{{output_dir}}/../.."}.
-
-%%
 %% etc/vm.args
 %%
-{run_user,              "dalmatiner"}.
-{crash_dump,            "/var/log/ddb_proxy"}.
-{run_user_home,         "/var/lib/ddb_proxy"}.
-{log_path,              "/var/log/ddb_proxy"}.
-
-{cuttlefish_conf,       "ddb_proxy.conf"}.
-
-{platform_etc_dir,      "/etc/ddb_proxy"}.
-{platform_bin_dir,      "./bin"}.
-{platform_lib_dir,      "/var/lib/ddb_proxy"}.
-{platform_log_dir,      "/var/log/ddb_proxy"}.
+{run_user,              "dalmatinerpx"}.
