--- a/rel/deb/Makefile
+++ b/rel/deb/Makefile
@@ -8,17 +8,17 @@ prepare:
 	mkdir -p stage/data/dalmatinerpx/example
 	mkdir -p stage/etc/systemd/system
 	mkdir -p stage/usr/bin
-	mkdir -p stage/usr/lib/dpx/lib
-	mkdir -p stage/usr/share/dpx
-	mkdir -p stage/var/lib/dpx
-	mkdir -p stage/var/log/dpx
+	mkdir -p stage/usr/lib/dalmatinerpx/lib
+	mkdir -p stage/usr/share/dalmatinerpx
+	mkdir -p stage/var/lib/dalmatinerpx
+	mkdir -p stage/var/log/dalmatinerpx
 	mkdir -p stage/DEBIAN
-	cp -r ../../_build/deb/rel/dpx/bin stage/usr/lib/dpx/
-	cp -r ../../_build/deb/rel/dpx/etc stage/data/dalmatinerpx/etc/
-	cp -r ../../_build/deb/rel/dpx/erts-* stage/usr/lib/dpx/
-	tar -cC ../../_build/deb/rel/dpx/lib --exclude c_src --exclude src . | tar -xC stage/usr/lib/dpx/lib
-	cp -r ../../_build/deb/rel/dpx/releases stage/usr/lib/dpx/
-	cp -r ../../_build/deb/rel/dpx/share stage/usr/lib/dpx/
+	cp -r ../../_build/deb/rel/dalmatinerpx/bin stage/usr/lib/dalmatinerpx/
+	cp -r ../../_build/deb/rel/dalmatinerpx/etc stage/data/dalmatinerpx/etc/
+	cp -r ../../_build/deb/rel/dalmatinerpx/erts-* stage/usr/lib/dalmatinerpx/
+	tar -cC ../../_build/deb/rel/dalmatinerpx/lib --exclude c_src --exclude src . | tar -xC stage/usr/lib/dalmatinerpx/lib
+	cp -r ../../_build/deb/rel/dalmatinerpx/releases stage/usr/lib/dalmatinerpx/
+	cp -r ../../_build/deb/rel/dalmatinerpx/share stage/usr/lib/dalmatinerpx/
 	cp -r ../../example/*conf stage/data/dalmatinerpx/example/
 	cp -r systemd/dalmatinerpx.service stage/etc/systemd/system/dalmatinerpx.service
 	cp control stage/DEBIAN/	
