--- a/rebar.config
+++ b/rebar.config
@@ -59,7 +59,7 @@
 %%-------------------------------------------------------------------
 
 {relx,
-  [{release, {dalmatinerpx, "0.3.2"},
+  [{release, {dalmatinerpx, "0.3.2p1"},
          [ddb_proxy,
           {recon, load},
           sasl]},
