--- a/example/telegraf.conf
+++ b/example/telegraf.conf
@@ -85,7 +85,7 @@
   ## Multiple urls can be specified as part of the same cluster,
   ## this means that only ONE of the urls will be written to each interval.
   # urls = ["udp://localhost:8089"] # UDP endpoint example
-  urls = ["http://localhost:8087", "http://192.168.1.44:8086"] # required
+  urls = ["http://localhost:8087"] # required
   ## The target database for metrics (telegraf will create it if not exists).
   database = "telegraf" # required
   ## Retention policy to write to.
