--- a/rebar.config
+++ b/rebar.config
@@ -73,6 +73,7 @@
           [{mkdir, "etc"},
            {mkdir, "share"},
            {copy, "rel/files/erl", "erts-\{\{erts_vsn\}\}/bin/erl"},
+           {template, "rel/files/dalmatinerpx", "bin/dalmatinerpx"},
            {copy, "rel/files/nodetool", "erts-\{\{erts_vsn\}\}/bin/nodetool"},
            {template, "share/dpx.xml", "share/dpx.xml"},
            {template, "schema/dpx.schema",
