--- a/rel/vars.config
+++ b/rel/vars.config
@@ -30,6 +30,7 @@
 {platform_bin_dir,              "./bin"}.
 {platform_lib_dir,              "./lib"}.
 {platform_log_dir,              "/data/dalmatinerpx/log"}.
+{platform_db_dir,               "/data/dalmatinerpx/db"}.
 
 {bugsnag_app_version,           "0.3.2p5"}.
 {service,                       "ddb_proxy"}.
