--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,8 @@
 %% Plugins
 %%-------------------------------------------------------------------
 
-{project_plugins, [{rebar3_cuttlefish, "0.14.0"}]}.
+%{project_plugins, [{rebar3_cuttlefish, "0.14.0"}]}.
+{project_plugins, [{rebar3_cuttlefish, ".*", {git, "https://github.com/project-fifo/rebar3_cuttlefish.git", {branch, "write_permissions"}}}]}.
 {plugins, [rebar3_gpb_plugin]}.
 
 %%-------------------------------------------------------------------
@@ -59,7 +60,7 @@
 %%-------------------------------------------------------------------
 
 {relx,
-  [{release, {dalmatinerpx, "0.3.3"},
+  [{release, {dpx, "0.3.3"},
          [ddb_proxy,
           {recon, load},
           sasl]},
@@ -73,7 +74,6 @@
           [{mkdir, "etc"},
            {mkdir, "share"},
            {copy, "rel/files/erl", "erts-\{\{erts_vsn\}\}/bin/erl"},
-           {template, "rel/files/dalmatinerpx", "bin/dalmatinerpx"},
            {copy, "rel/files/nodetool", "erts-\{\{erts_vsn\}\}/bin/nodetool"},
            {template, "share/dpx.xml", "share/dpx.xml"},
            {template, "schema/dpx.schema",
