--- a/rel/vars.config
+++ b/rel/vars.config
@@ -31,6 +31,8 @@
 {platform_lib_dir,              "./lib"}.
 {platform_log_dir,              "/data/dalmatinerpx/log"}.
 {platform_db_dir,               "/data/dalmatinerpx/db"}.
+{platform_gen_dir,              "/data/dalmatinerpx/db"}.
+{platform_pipe_dir,             "/tmp/dalmatinerpx_pipes/"}.
 
 {bugsnag_app_version,           "0.3.3"}.
 {service,                       "ddb_proxy"}.
