Change conf file name

--- a/rebar.config
+++ b/rebar.config
@@ -39,7 +39,7 @@
 %%-------------------------------------------------------------------
 
 {cuttlefish,
- [{file_name, "dalmatinerpx.conf.example"},
+ [{file_name, "dpx.conf"},
   {schema_discovery, false}]}.
 
 %%-------------------------------------------------------------------
