--- a/rebar.config
+++ b/rebar.config
@@ -47,8 +47,10 @@
 %%-------------------------------------------------------------------
 
 {profiles,
- [{prod, [{relx, [{dev_mode, false},
-                  {include_erts, true}]}]},
+ [
+  {darwin, [{relx, [{dev_mode, false}, {include_erts, true}]}]},
+  {smartos, [{relx, [{dev_mode, false}, {include_erts, true}]}]},
+  {freebsd, [{relx, [{dev_mode, false}, {include_erts, true}]}]},
   {lint,  [{plugins, [rebar3_lint]}]},
   {deb, [{relx, [{dev_mode, false},
                  {overlay_vars, "rel/vars/deb.config"},
